FIX: improves reactions and thread indicator on mobile
This commit attempts to prevent touch on these components to make the whole message active and allows for example long press on reactions without making a long press on the message or triggering a reaction.

--- a/plugins/chat/assets/stylesheets/common/chat-message-thread-indicator.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-message-thread-indicator.scss
@@ -12,6 +12,10 @@
   border-radius: 8px;
   color: var(--primary);
 
+  > * {
+    pointer-events: none;
+  }
+
   &:visited,
   &:hover {
     color: var(--primary);
